--- a/KinectFittingRoom/KinectFittingRoom/Resources/Styles/GlassButton.xaml
+++ b/KinectFittingRoom/KinectFittingRoom/Resources/Styles/GlassButton.xaml
@@ -7,7 +7,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type buttons:KinectButton}">
-                    <Border x:Name="ButtonBorder" Background="#AB101010" BorderBrush="Gray" CornerRadius="25" BorderThickness="4" RenderTransformOrigin="0.5, 0.5" Margin="0, 10, 0, 0">
+                    <Border x:Name="ButtonBorder" Background="#AB101010" BorderBrush="Gray" CornerRadius="25" BorderThickness="4" RenderTransformOrigin="0.5, 0.5">
                         <Grid>
                             <Rectangle Opacity="0.5" RadiusX="23" RadiusY="23">
                                 <Rectangle.Fill>
